add switch to use SM RGEs for the gauge couplings

--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -113,8 +113,11 @@ int main(int argc, const char* argv[])
    if (!spectrum_file.empty())
       spectrum_generator.write_spectrum(spectrum_file);
 
-   if (!rgflow_file.empty())
+   if (!rgflow_file.empty()) {
       spectrum_generator.write_running_couplings(rgflow_file);
+      Beta_function::SM_rges = true;
+      spectrum_generator.write_running_couplings(rgflow_file + ".sm");
+   }
 
    const int exit_code = spectrum_generator.get_exit_code();
 
