rename DRbar spectrum calculation function
as suggested by Peter.  The function calculates the DRbar mass
spectrum, and therefore should not be called
calculate_DRbar_parameters (which is the Softsusy name).

--- a/templates/two_scale_initial_guesser.cpp.in
+++ b/templates/two_scale_initial_guesser.cpp.in
@@ -205,7 +205,7 @@ void @ModelName@_initial_guesser<Two_scale>::guess_soft_parameters()
    model->solve_ewsb_tree_level();
 
    // calculate tree-level spectrum
-   model->calculate_DRbar_parameters();
+   model->calculate_DRbar_masses();
 }
 
 } // namespace flexiblesusy
