--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -79,7 +79,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::apply()
    assert(model && "Error: @ModelName@_low_scale_constraint:"
           " model pointer must not be zero");
 
-   model->calculate_DRbar_parameters();
+   model->calculate_DRbar_masses();
    update_scale();
    calculate_DRbar_gauge_couplings();
 
