--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -196,7 +196,7 @@ int CLASSNAME::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* 
 
 @calculateTreeLevelTadpoles@
    if (ewsb_loop_order > 0) {
-      model->calculate_DRbar_parameters();
+      model->calculate_DRbar_masses();
 @calculateOneLoopTadpoles@
       if (ewsb_loop_order > 1) {
 @calculateTwoLoopTadpoles@
@@ -388,13 +388,22 @@ double CLASSNAME::G0(double p, double m1, double m2) const
 /**
  * routine which finds the DRbar mass eigenstates and mixings.
  */
-void CLASSNAME::calculate_DRbar_parameters()
+void CLASSNAME::calculate_DRbar_masses()
 {
 @saveSoftHiggsMasses@
    solve_ewsb_tree_level_via_soft_higgs_masses();
 
 @calculateAllMasses@
 @restoreSoftHiggsMasses@
+}
+
+/**
+ * Backward compatibility routine which finds the DRbar mass
+ * eigenstates and mixings.
+ */
+void CLASSNAME::calculate_DRbar_parameters()
+{
+   calculate_DRbar_masses();
 }
 
 /**
@@ -446,7 +455,7 @@ void CLASSNAME::reorder_pole_masses()
  */
 void CLASSNAME::calculate_spectrum()
 {
-   calculate_DRbar_parameters();
+   calculate_DRbar_masses();
    if (pole_mass_loop_order > 0)
       calculate_pole_masses();
 
