--- a/templates/two_scale_susy_scale_constraint.cpp.in
+++ b/templates/two_scale_susy_scale_constraint.cpp.in
@@ -68,7 +68,7 @@ void @ModelName@_susy_scale_constraint<Two_scale>::apply()
    assert(model && "Error: @ModelName@_susy_scale_constraint:"
           " model pointer must not be zero");
 
-   model->calculate_DRbar_parameters();
+   model->calculate_DRbar_masses();
    update_scale();
 
    // apply user-defined susy scale constraints
