--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -210,6 +210,10 @@ void @ModelName@_low_scale_constraint<Two_scale>::calculate_@UpYukawa@_DRbar()
    if (model->get_thresholds())
       topDRbar(2,2) = model->calculate_M@TopQuark@_DRbar(oneset.displayPoleMt(), 2);
 
+   // CKM rotation
+   const Eigen::Matrix<double,3,3> CKM(oneset.displayCKM().get_real_ckm());
+   topDRbar = CKM.transpose() * topDRbar * CKM;
+
 @setDRbarUpQuarkYukawaCouplings@
 }
 
