--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -78,6 +78,7 @@ private:
    void set_mass(const @ModelName@_physical&, bool);
    void set_mixing_matrices(const @ModelName@_physical&, bool);
    template <class T> void set_model_parameters(const @ModelName@<T>&);
+   template <class T> void set_ckm(const @ModelName@<T>&);
    double read_scale() const;
    template <class T> void fill_drbar_parameters(@ModelName@<T>&) const;
    template <class T> void fill_physical(@ModelName@<T>&) const;
@@ -142,6 +143,17 @@ void @ModelName@_slha_io::set_spectrum(const @ModelName@<T>& model)
    set_model_parameters(model);
    set_mass(physical, write_sm_masses);
    set_mixing_matrices(physical, write_sm_masses);
+   set_ckm(model);
+}
+
+template <class T>
+void @ModelName@_slha_io::set_ckm(const @ModelName@<T>& model)
+{
+   const Eigen::Matrix<double,3,3> V_d(MODELPARAMETER(@LeftDownMixingMatrix@).real());
+   const Eigen::Matrix<double,3,3> V_u(MODELPARAMETER(@LeftUpMixingMatrix@).real());
+   const Eigen::Matrix<double,3,3> ckm_matrix(V_u.adjoint()*V_d);
+
+   slha_io.set_block("VCKM", ckm_matrix, "CKM", model.get_scale());
 }
 
 } // namespace flexiblesusy
