write imaginary part of CKM matrix to SLHA file

--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -149,11 +149,12 @@ void @ModelName@_slha_io::set_spectrum(const @ModelName@<T>& model)
 template <class T>
 void @ModelName@_slha_io::set_ckm(const @ModelName@<T>& model)
 {
-   const Eigen::Matrix<double,3,3> V_d(MODELPARAMETER(@LeftDownMixingMatrix@).real());
-   const Eigen::Matrix<double,3,3> V_u(MODELPARAMETER(@LeftUpMixingMatrix@).real());
-   const Eigen::Matrix<double,3,3> ckm_matrix(V_u.adjoint()*V_d);
+   const Eigen::Matrix<std::complex<double>,3,3> V_d(MODELPARAMETER(@LeftDownMixingMatrix@));
+   const Eigen::Matrix<std::complex<double>,3,3> V_u(MODELPARAMETER(@LeftUpMixingMatrix@));
+   const Eigen::Matrix<std::complex<double>,3,3> ckm_matrix(V_u.adjoint()*V_d);
 
-   slha_io.set_block("VCKM", ckm_matrix, "CKM", model.get_scale());
+   slha_io.set_block("VCKM"  , ckm_matrix.real(), "Re(CKM)", model.get_scale());
+   slha_io.set_block("IMVCKM", ckm_matrix.imag(), "Im(CKM)", model.get_scale());
 }
 
 } // namespace flexiblesusy
