Revert "remove right CKM matrix factor, as it is irrelevant"
This reverts commit 47ce8a234d1011ef1178f670a030959a28864caa.

The low-energy Yukawa couplings with commit
47ce8a234d1011ef1178f670a030959a28864caa do not match Softsusy.
I need to check this.

--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -212,7 +212,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::calculate_@UpYukawa@_DRbar()
 
    // CKM rotation
    const Eigen::Matrix<double,3,3> CKM(oneset.displayCKM().get_real_ckm());
-   topDRbar = CKM.transpose() * topDRbar;
+   topDRbar = CKM.transpose() * topDRbar * CKM;
 
 @setDRbarUpQuarkYukawaCouplings@
 }
