add configure switch to enable the eigenvalue error checks

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -21,6 +21,7 @@ ENABLE_THREADS     := @ENABLE_THREADS@
 # C/C++ preprocessor defines
 ENABLE_COLOR_PRINTOUT := @ENABLE_COLOR_PRINTOUT@
 ENABLE_DEBUG          := @ENABLE_DEBUG@
+ENABLE_EIGENVALUE_ERROR_CHECK := @ENABLE_EIGENVALUE_ERROR@
 ENABLE_SILENT         := @ENABLE_SILENT@
 ENABLE_VERBOSE        := @ENABLE_VERBOSE@
 
@@ -231,6 +232,7 @@ showbuild:
 	@echo "ENABLE_COLOR_PRINTOUT = $(ENABLE_COLOR_PRINTOUT)"
 	@echo "ENABLE_COMPILE     = $(ENABLE_COMPILE)"
 	@echo "ENABLE_DEBUG       = $(ENABLE_DEBUG)"
+	@echo "ENABLE_EIGENVALUE_ERROR_CHECK = $(ENABLE_EIGENVALUE_ERROR_CHECK)"
 	@echo "ENABLE_FFLITE      = $(ENABLE_FFLITE)"
 	@echo "ENABLE_LOOPTOOLS   = $(ENABLE_LOOPTOOLS)"
 	@echo "ENABLE_META        = $(ENABLE_META)"
