define SUSY scale in terms of m_stop(1) and m_stop(2)
instead of m_sup(1) and m_sup(6) .  This new scale definition avoids
large logarithms in the Higgs mass prediction in case stop(1) and
stop(2) cannot be identified with sup(1) and sup(6), respectively.

This patch addresses Reviewer 1 comment A-2.

--- a/model_files/InertMSSM/FlexibleSUSY.m.in
+++ b/model_files/InertMSSM/FlexibleSUSY.m.in
@@ -11,7 +11,7 @@ MINPAR = { {1, m0},
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu] };
 
-SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
