--- a/model_files/MSSMCPV/FlexibleSUSY.m.in
+++ b/model_files/MSSMCPV/FlexibleSUSY.m.in
@@ -13,7 +13,7 @@ EXTPAR = { {100, eta} };
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu], mHd2, mHu2 };
 
-SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
