--- a/model_files/MSSMNoFV/FlexibleSUSY.m.in
+++ b/model_files/MSSMNoFV/FlexibleSUSY.m.in
@@ -13,7 +13,7 @@ MINPAR = {
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu] };
 
-SUSYScale = Sqrt[M[St[1]]*M[St[2]]];
+SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
