--- a/model_files/NUHMSSM/FlexibleSUSY.m.in
+++ b/model_files/NUHMSSM/FlexibleSUSY.m.in
@@ -18,7 +18,7 @@ EXTPAR = {
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu] };
 
-SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
