--- a/model_files/TMSSM/FlexibleSUSY.m.in
+++ b/model_files/TMSSM/FlexibleSUSY.m.in
@@ -16,7 +16,7 @@ EXTPAR = { {80, LambdaInput},
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu], mT2 };
 
-SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
