--- a/model_files/UMSSM/FlexibleSUSY.m.in
+++ b/model_files/UMSSM/FlexibleSUSY.m.in
@@ -23,7 +23,7 @@ EXTPAR = { {61, LambdaInput},
 
 EWSBOutputParameters = { mHd2, mHu2, ms2 };
 
-SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
