--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -103,8 +103,10 @@ int main(int argc, const char* argv[])
    slha_io.set_sminputs(oneset);
    slha_io.set_minpar(input);
    slha_io.set_extpar(input);
-   if (!problems.have_problem())
+   if (!problems.have_problem()) {
       slha_io.set_spectrum(model);
+      slha_io.set_extra(model);
+   }
 
    if (slha_output_file.empty()) {
       slha_io.write_to_stream(std::cout);
