--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -58,6 +58,7 @@ public:
    double get_parameter_output_scale() const;
    void read_from_file(const std::string&);
    void set_extpar(const @ModelName@_input_parameters&);
+   template <class T> void set_extra(const @ModelName@<T>&);
    void set_minpar(const @ModelName@_input_parameters&);
    void set_sminputs(const softsusy::QedQcd&);
    template <class T> void set_spectrum(const @ModelName@<T>&);
@@ -123,6 +124,17 @@ template <class T>
 void @ModelName@_slha_io::set_model_parameters(const @ModelName@<T>& model)
 {
 @writeSLHAModelParametersBlocks@
+}
+
+/**
+ * Writes extra SLHA blocks
+ *
+ * @param model model class
+ */
+template <class T>
+void @ModelName@_slha_io::set_extra(const @ModelName@<T>& model)
+{
+@writeExtraSLHAOutputBlock@
 }
 
 /**
