--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -30,6 +30,7 @@
 #include <string>
 #include <utility>
 
+#define Pole(p) model.get_physical().p
 #define PHYSICAL(p) model.get_physical().p
 #define LOCALPHYSICAL(p) physical.p
 #define MODELPARAMETER(p) model.get_##p()
