--- a/model_files/MSSMNoFV/FlexibleSUSY.m.in
+++ b/model_files/MSSMNoFV/FlexibleSUSY.m.in
@@ -68,7 +68,7 @@ UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
 
 ExtraSLHAOutputBlocks = {
-   {ALPHA, {{Null, ArcCos[ZH[1,2]]}}},
+   {ALPHA, {{Null, ArcCos[Pole[ZH[1,2]]]}}},
    {HMIX , {{1, \[Mu]},
             {2, vu / vd},
             {3, Sqrt[vu^2 + vd^2]},
