add git commit number to the debug output to help us debugging

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -8,6 +8,7 @@
 #define FLEXIBLESUSY_MINOR    @FLEXIBLESUSY_MINOR@
 #define FLEXIBLESUSY_PATCH    @FLEXIBLESUSY_PATCH@
 #define FLEXIBLESUSY_EXTRA    "@FLEXIBLESUSY_EXTRA@"
+#define GIT_COMMIT            "@GIT_COMMIT@"
 
 #define SARAH_VERSION         "@SARAH_VERSION@"
 #define SARAH_MAJOR           @SARAH_MAJOR@
