add new MSOFT block also to MSSM and lowMSSM

--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -90,5 +90,25 @@ ExtraSLHAOutputBlocks = {
             {3, 3, T[Yd][3,3] / Yd[3,3]} } },
    {Ae,    {{1, 1, T[Ye][1,1] / Ye[1,1]},
             {2, 2, T[Ye][2,2] / Ye[2,2]},
-            {3, 3, T[Ye][3,3] / Ye[3,3]} } }
+            {3, 3, T[Ye][3,3] / Ye[3,3]} } },
+   {MSOFT, {{1, MassB},
+            {2, MassWB},
+            {3, MassG},
+            {21, mHd2},
+            {22, mHu2},
+            {31, Sqrt[ml2[1,1]]},
+            {32, Sqrt[ml2[2,2]]},
+            {33, Sqrt[ml2[3,3]]},
+            {34, Sqrt[me2[1,1]]},
+            {35, Sqrt[me2[2,2]]},
+            {36, Sqrt[me2[3,3]]},
+            {41, Sqrt[mq2[1,1]]},
+            {42, Sqrt[mq2[2,2]]},
+            {43, Sqrt[mq2[3,3]]},
+            {44, Sqrt[mu2[1,1]]},
+            {45, Sqrt[mu2[2,2]]},
+            {46, Sqrt[mu2[3,3]]},
+            {47, Sqrt[md2[1,1]]},
+            {48, Sqrt[md2[2,2]]},
+            {49, Sqrt[md2[3,3]]} } }
 };
