--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -25,6 +25,7 @@
 #include "@ModelName@_info.hpp"
 #include "@ModelName@_physical.hpp"
 #include "slha_io.hpp"
+#include "ckm.hpp"
 
 #include <Eigen/Core>
 #include <string>
@@ -78,6 +79,7 @@ private:
    void set_mass(const @ModelName@_physical&, bool);
    void set_mixing_matrices(const @ModelName@_physical&, bool);
    template <class T> void set_model_parameters(const @ModelName@<T>&);
+   template <class T> void set_ckm(const @ModelName@<T>&);
    void set_ckm(const Eigen::Matrix<std::complex<double>,3,3>&, const Eigen::Matrix<std::complex<double>,3,3>&, double);
    double read_scale() const;
    template <class T> void fill_drbar_parameters(@ModelName@<T>&) const;
@@ -144,11 +146,21 @@ void @ModelName@_slha_io::set_spectrum(const @ModelName@<T>& model)
    set_mass(physical, write_sm_masses);
    set_mixing_matrices(physical, write_sm_masses);
 
-   if (slha_io.get_modsel().quark_flavour_violated) {
-      set_ckm(MODELPARAMETER(@LeftDownMixingMatrix@),
-              MODELPARAMETER(@LeftUpMixingMatrix@),
-              model.get_scale());
-   }
+   if (slha_io.get_modsel().quark_flavour_violated)
+      set_ckm(model);
+}
+
+template <class T>
+void @ModelName@_slha_io::set_ckm(const @ModelName@<T>& model)
+{
+   Eigen::Matrix<std::complex<double>,3,3> V_u(MODELPARAMETER(@LeftUpMixingMatrix@));
+   Eigen::Matrix<std::complex<double>,3,3> V_d(MODELPARAMETER(@LeftDownMixingMatrix@));
+   Eigen::Matrix<std::complex<double>,3,3> U_u(MODELPARAMETER(@RightUpMixingMatrix@));
+   Eigen::Matrix<std::complex<double>,3,3> U_d(MODELPARAMETER(@RightDownMixingMatrix@));
+
+   CKM_parameters::to_pdg_convention(V_u, V_d, U_u, U_d);
+
+   set_ckm(V_u, V_d, model.get_scale());
 }
 
 } // namespace flexiblesusy
