help FS finding the soft Higgs masses
I introduces the new user variable FSSoftHiggsMasses where the user
can specify the list of soft Higgs masses.

For the calculation of the Higgs masses, the tree-level EWSB
eqs. substitution must be done in the Higgs mass matrix.  In FS this
substitution is done like this:

 0) save the soft Higgs masses in temporary varibles

 1) solve the tree-level EWSB eqs. for the soft Higgs masses
    (thereby the soft Higgs masse are overwritten)

 2) calculate the Higgs mass matrix

 3) reset the soft Higgs masses to the saved values from 0)

For these steps, FS needs to know which model parameters are the soft
Higgs masses.  In some models (for example in the munuSSM), this is
difficult to find out.  If FS fails to find the soft Higgs masses, the
user can assist by setting them in the variable FSSoftHiggsMasses.

--- a/model_files/munuSSM/FlexibleSUSY.m.in
+++ b/model_files/munuSSM/FlexibleSUSY.m.in
@@ -23,6 +23,8 @@ EXTPAR = {
 
 EWSBOutputParameters = {mlHd2[1], mlHd2[2], mlHd2[3], mHd2, mHu2, mv2};
 
+FSSoftHiggsMasses = EWSBOutputParameters;
+
 SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
