remove undefined particles from LSP list

--- a/model_files/munuSSM/FlexibleSUSY.m.in
+++ b/model_files/munuSSM/FlexibleSUSY.m.in
@@ -89,7 +89,7 @@ InitialGuessAtHighScale = {};
 UseHiggs2LoopNMSSM = False;
 EffectiveMu =.;
 
-PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
+PotentialLSPParticles = { Chi, Su, Sd, Cha, Glu };
 
 DefaultPoleMassPrecision = MediumPrecision;
 HighPoleMassPrecision    = {hh, Ah, Hpm};
