--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -57,6 +57,7 @@ public:
    void fill(Spectrum_generator_settings&) const;
    double get_input_scale() const;
    double get_parameter_output_scale() const;
+   const SLHA_io& get_slha_io() const { return slha_io; }
    void read_from_file(const std::string&);
    void set_extpar(const @ModelName@_input_parameters&);
    template <class T> void set_extra(const @ModelName@<T>&);
