--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -25,6 +25,7 @@
 #include "@ModelName@_info.hpp"
 #include "@ModelName@_physical.hpp"
 #include "slha_io.hpp"
+#include "ew_input.hpp"
 
 #include <Eigen/Core>
 #include <string>
@@ -38,6 +39,7 @@
    typename std::remove_const<typename std::remove_reference<decltype(MODELPARAMETER(p))>::type>::type p;
 #define DEFINE_POLE_MASS(p)                                            \
    typename std::remove_const<typename std::remove_reference<decltype(PHYSICAL(p))>::type>::type p;
+#define SM(p) Electroweak_constants::p
 
 namespace flexiblesusy {
 
