--- a/model_files/LHInputMSSM/FlexibleSUSY.m.in
+++ b/model_files/LHInputMSSM/FlexibleSUSY.m.in
@@ -32,6 +32,7 @@ HighScaleInput={
    {T[Ye], Aeij*Ye},
    {T[Yd], Azero*Yd},
    {T[Yu], Azero*Yu},
+   {mHd2, LHInput[mHd2]},
    {mHu2, m0^2},
    {ml2, UNITMATRIX[3] m0^2},
    {md2, UNITMATRIX[3] m0^2},
@@ -51,8 +52,7 @@ LowScaleInput={
    {Yd, Automatic},
    {Ye, Automatic},
    {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
-   {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]},
-   {mHd2, LHInput[mHd2]}
+   {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]}
 };
 
 InitialGuessAtLowScale = {
