enable reading of scalars from extra blocks

--- a/model_files/LHInputMSSM/FlexibleSUSY.m.in
+++ b/model_files/LHInputMSSM/FlexibleSUSY.m.in
@@ -10,8 +10,10 @@ MINPAR = { {1, m0},
            {5, Azero} };
 
 FSExtraInputParameters = {
-    {Aeij, AeijIN, {3,3}},
-    {Vei , VeiIN , {3}}
+    {Aeij, AeijIN, {3,3}}, (* 3x3 matrix *)
+    {Vei , VeiIN , {3}  }, (* 3 vector *)
+    {S1  , S1IN  , {1}  }, (* scalar *)
+    {S2  , S2IN  , {}   }  (* scalar *)
 };
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu] };
