--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -43,6 +43,7 @@ LIB@CLASSNAME@_SRC += \
 		$(DIR)/@CLASSNAME@_two_scale_initial_guesser.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_model.cpp \
+		$(DIR)/@CLASSNAME@_two_scale_model_slha.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp
@@ -57,6 +58,7 @@ LIB@CLASSNAME@_HDR += \
 		$(DIR)/@CLASSNAME@_input_parameters.hpp \
 		$(DIR)/@CLASSNAME@_low_scale_constraint.hpp \
 		$(DIR)/@CLASSNAME@_model.hpp \
+		$(DIR)/@CLASSNAME@_model_slha.hpp \
 		$(DIR)/@CLASSNAME@_physical.hpp \
 		$(DIR)/@CLASSNAME@_slha_io.hpp \
 		$(DIR)/@CLASSNAME@_spectrum_generator.hpp \
@@ -67,6 +69,7 @@ LIB@CLASSNAME@_HDR += \
 		$(DIR)/@CLASSNAME@_two_scale_initial_guesser.hpp \
 		$(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.hpp \
 		$(DIR)/@CLASSNAME@_two_scale_model.hpp \
+		$(DIR)/@CLASSNAME@_two_scale_model_slha.hpp \
 		$(DIR)/@CLASSNAME@_two_scale_soft_parameters.hpp \
 		$(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp \
 		$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.hpp
