--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -35,6 +35,7 @@ LIB@CLASSNAME@_HDR :=
 ifneq ($(findstring two_scale,$(ALGORITHMS)),)
 LIB@CLASSNAME@_SRC += \
 		$(DIR)/@CLASSNAME@_info.cpp \
+		$(DIR)/@CLASSNAME@_input_parameters.cpp \
 		$(DIR)/@CLASSNAME@_slha_io.cpp \
 		$(DIR)/@CLASSNAME@_physical.cpp \
 		$(DIR)/@CLASSNAME@_utilities.cpp \
@@ -49,6 +50,7 @@ LIB@CLASSNAME@_SRC += \
 		$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp
 EXE@CLASSNAME@_SRC += \
 		$(DIR)/run_@CLASSNAME@.cpp \
+		$(DIR)/run_cmd_line_@CLASSNAME@.cpp \
 		$(DIR)/scan_@CLASSNAME@.cpp
 LIB@CLASSNAME@_HDR += \
 		$(DIR)/@CLASSNAME@_convergence_tester.hpp \
@@ -126,6 +128,9 @@ LIB@CLASSNAME@     := $(DIR)/lib$(MODNAME)$(LIBEXT)
 RUN_@CLASSNAME@_OBJ := $(DIR)/run_@CLASSNAME@.o
 RUN_@CLASSNAME@_EXE := $(DIR)/run_@CLASSNAME@.x
 
+RUN_CMD_LINE_@CLASSNAME@_OBJ := $(DIR)/run_cmd_line_@CLASSNAME@.o
+RUN_CMD_LINE_@CLASSNAME@_EXE := $(DIR)/run_cmd_line_@CLASSNAME@.x
+
 SCAN_@CLASSNAME@_OBJ := $(DIR)/scan_@CLASSNAME@.o
 SCAN_@CLASSNAME@_EXE := $(DIR)/scan_@CLASSNAME@.x
 
@@ -179,6 +184,7 @@ clean-$(MODNAME): clean-$(MODNAME)-src
 clean-$(MODNAME): clean-$(MODNAME)-dep clean-$(MODNAME)-obj
 		-rm -f $(LIB@CLASSNAME@)
 		-rm -f $(RUN_@CLASSNAME@_EXE)
+		-rm -f $(RUN_CMD_LINE_@CLASSNAME@_EXE)
 		-rm -f $(SCAN_@CLASSNAME@_EXE)
 
 distclean-$(MODNAME): clean-$(MODNAME)
@@ -226,10 +232,13 @@ $(LIB@CLASSNAME@): $(LIB@CLASSNAME@_OBJ)
 $(RUN_@CLASSNAME@_EXE): $(RUN_@CLASSNAME@_OBJ) $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY) $(filter-out -%,$(LOOPFUNCLIBS))
 		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(BLASLIBS) $(FLIBS)
 
+$(RUN_CMD_LINE_@CLASSNAME@_EXE): $(RUN_CMD_LINE_@CLASSNAME@_OBJ) $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY) $(filter-out -%,$(LOOPFUNCLIBS))
+		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(BLASLIBS) $(FLIBS)
+
 $(SCAN_@CLASSNAME@_EXE): $(SCAN_@CLASSNAME@_OBJ) $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY) $(filter-out -%,$(LOOPFUNCLIBS))
 		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(BLASLIBS) $(FLIBS)
 
 ALLDEP += $(LIB@CLASSNAME@_DEP) $(EXE@CLASSNAME@_DEP)
 ALLSRC += $(LIB@CLASSNAME@_SRC) $(EXE@CLASSNAME@_SRC)
 ALLLIB += $(LIB@CLASSNAME@)
-ALLEXE += $(RUN_@CLASSNAME@_EXE) $(SCAN_@CLASSNAME@_EXE)
+ALLEXE += $(RUN_@CLASSNAME@_EXE) $(RUN_CMD_LINE_@CLASSNAME@_EXE) $(SCAN_@CLASSNAME@_EXE)
